<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPressedHighlight"
    tools:context="com.ammu.pa.fillme.BanyanActivity">

    <Button
        android:id="@+id/ButtonR"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:onClick="onClickR"
        android:text="@string/r"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/ButtonO"
        app:layout_constraintTop_toTopOf="@+id/ButtonO" />

    <Button
        android:id="@+id/ButtonO"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:onClick="onClickO"
        android:text="@string/o"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/ButtonK"
        app:layout_constraintTop_toTopOf="@+id/ButtonK" />

    <Button
        android:id="@+id/ButtonBanyan"
        android:layout_width="239dp"
        android:layout_height="76dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/banyan"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonK"
        android:layout_width="77dp"
        android:layout_height="68dp"
        android:layout_marginStart="12dp"
        android:onClick="onClickK"
        android:text="@string/k"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/ButtonN"
        app:layout_constraintTop_toTopOf="@+id/ButtonN" />

    <Button
        android:id="@+id/ButtonN"
        android:layout_width="72dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:onClick="onClickN"
        android:text="@string/n"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonBanyan" />

    <Button
        android:id="@+id/ButtonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorAccent"
        android:onClick="onClickNext"
        android:text="@string/play_again"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonN" />


</android.support.constraint.ConstraintLayout>
